# output-coloring

./: Cargo.toml  README.md
examples/: simplest.rs
src/: color.rs  colored_template.rs  lib.rs  style.rs
